# infra-base

./: .gitignore  .renovaterc  Taskfile.yaml  base.go  cdk8s.yaml  deno.json  deno.jsonc  filesystem.Taskfile.yaml  go.mod  go.sum  k8s.Taskfile.yaml  mod.ts  package.json  pnpm-lock.yaml  postgres.Taskfile.yaml  renovate.json
charts/grafana-dashboards/hack/: download_grafana_dashboards.py  pyproject.toml  sync_grafana_dashboards.py
cluster-init/: helm-argocd.yaml  helm-cert-manager.yaml  helm-doppler-kubernetes-operator.yaml  helm-external-secrets.yaml
dockerfiles/: cs-firewall-bouncer.Dockerfile
go-k8s-sidecar/: go.mod  go.sum  main.go
image-updater/: Dockerfile  README.md  index.js
imports/: ingressroute-traefik.io.ts  ingressroutetcp-traefik.io.ts  ingressrouteudp-traefik.io.ts  middlewares-traefik.io.ts  middlewarestcp-traefik.io.ts  serverstransports-traefik.io.ts  tlsoptions-traefik.io.ts  tlsstores-traefik.io.ts  traefikservices-traefik.io.ts
infrahelpers/: helpers.go  helpersv2.go
k8s-base/: application.go  auth.go  base.go  database-mariadb.go  database-postgres-backup-restore-job.go  database-postgres.go  database-redis.go  database.go  global.go  helpers-externalsecret.go  helpers-helm.go  helpers.go  ingress-cert-issuer.go  ingress-cert-manager.go  ingress-traefik.go  ingress.go  monitoring-alerting-rules.go  monitoring-alertmanager.go  monitoring-grafana-dashboards.go  monitoring-grafana-datasource.go  monitoring-kube-state-metrics.go  monitoring-loki.go  monitoring-node-exporter.go  monitoring-vector.go  monitoring-victoriametrics.go  secrets.go  (+10 more)
(+2183 files in other folders)
